tests/neg-custom-args/captures/scoped-caps2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:6:31 ----------------------------------
6 |  val _: (x: C) => C^{fresh} = b // error
  |                               ^
  |                        Found:    (b : C ->{any} C)
  |                        Required: (x: C^) ->{any²} C^{fresh}
  |
  |                        Note that capability `any` cannot flow into capture set {any²}.
  |
  |                        where:    ^     refers to the root capability caps.any
  |                                  any   is a root capability in the type of value b
  |                                  any²  is a root capability in the type of value _$1
  |                                  fresh is a root capability associated with the result type of (x: C^): C^{fresh}
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:7:18 ----------------------------------
7 |  val _: C => C = a // error
  |                  ^
  |                Found:    (a : (x: C) ->{any} C)
  |                Required: C^ ->{any²} C^²
  |
  |                Note that capability `any` cannot flow into capture set {any²}.
  |
  |                where:    ^    refers to the root capability caps.any
  |                          ^²   refers to a root capability classified as SharedCapability in the type of value _$2
  |                          any  is a root capability in the type of value a
  |                          any² is a root capability in the type of value _$2
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:9:29 ----------------------------------
9 |  val _: C => C = (x: C) => a(x) // error
  |                            ^^^^
  |Found:    C^{any}
  |Required: C^{any²}
  |
  |Note that capability `any` cannot flow into capture set {any²}
  |because any in an enclosing function is not visible from any² in value _$4.
  |
  |where:    any  is a root capability classified as SharedCapability created in anonymous function of type (x: C): C when instantiating method apply's type (x: C^): C^{fresh}
  |          any² is a root capability classified as SharedCapability in the type of value _$4
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:15:18 ---------------------------------
15 |  val _: C -> C = a // error
   |                  ^
   |                  Found:    (a : (x: C) -> C)
   |                  Required: C^ -> C^{any}
   |
   |                  Note that capability `fresh` cannot flow into capture set {any}
   |                  because fresh is not visible from any in value _$6.
   |
   |                  where:    ^     refers to the root capability caps.any
   |                            any   is a root capability classified as SharedCapability in the type of value _$6
   |                            fresh is a root capability associated with the result type of (x: C^): C^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:17:29 ---------------------------------
17 |  val _: C -> C = (x: C) => a(x) // error
   |                            ^^^^
   |Found:    C^{any}
   |Required: C^{any²}
   |
   |Note that capability `any` cannot flow into capture set {any²}
   |because any in an enclosing function is not visible from any² in value _$8.
   |
   |where:    any  is a root capability classified as SharedCapability created in anonymous function of type (x: C): C when instantiating method apply's type (x: C^): C^{fresh}
   |          any² is a root capability classified as SharedCapability in the type of value _$8
   |
   | longer explanation available when compiling with `-explain`
